--- a/impostor-game.html
+++ b/impostor-game.html
@@ -122,7 +122,7 @@ input {
 
 <script>
 /* ====== USTAWIENIE: ILOŚĆ GRACZY (bez hosta) ====== */
-const MAX_PLAYERS = 4;
+const MAX_PLAYERS = 3-10;
 
 /* ====== Firebase ====== */
 const firebaseConfig = {
@@ -567,4 +567,5 @@ document.getElementById("btnLangDe").addEventListener("click", () => { lang = "d
 </script>
 </body>
 </html>
+
 
