--- a/impostor-game.html
+++ b/impostor-game.html
@@ -4,84 +4,261 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 <title id="pageTitle">🕵️‍♂️ IMPOSTOR GAME</title>
+
 <style>
-body {
-  font-family: 'Segoe UI', sans-serif;
-  background: #0d1117;
-  color: #fff;
+:root{
+  --bg0:#070a10;
+  --bg1:#0d1117;
+  --panel:#111824cc;
+  --panelSolid:#111824;
+  --stroke:#233041;
+  --text:#e8eef7;
+  --muted:#98a6b7;
+  --brand:#00d26a;
+  --brand2:#00ffa8;
+  --danger:#ff4d6d;
+  --shadow: 0 16px 50px rgba(0,0,0,.45);
+  --shadowSoft: 0 10px 30px rgba(0,0,0,.28);
+  --radius: 22px;
+}
+
+/* Ustawienia globalne */
+*{ box-sizing:border-box; }
+html,body{ height:100%; }
+body{
+  font-family: ui-sans-serif, system-ui, -apple-system, "Segoe UI", Roboto, Arial, "Noto Sans",
+    "Apple Color Emoji","Segoe UI Emoji";
+  background:
+    radial-gradient(900px 600px at 20% 10%, rgba(0,210,106,.22), transparent 60%),
+    radial-gradient(700px 500px at 80% 25%, rgba(0,255,168,.14), transparent 60%),
+    radial-gradient(900px 700px at 50% 110%, rgba(0,210,106,.12), transparent 60%),
+    linear-gradient(180deg, var(--bg0), var(--bg1));
+  color: var(--text);
   text-align: center;
   margin: 0;
-  padding: 0;
+  padding: 24px 14px 40px;
+  overflow-x:hidden;
 }
-h1 {
-  color: #00d26a;
-  margin-top: 40px;
-  font-size: 42px;
+
+/* Delikatny “noise” */
+body::before{
+  content:"";
+  position:fixed;
+  inset:0;
+  pointer-events:none;
+  opacity:.06;
+  background-image:
+    repeating-linear-gradient(0deg, rgba(255,255,255,.08) 0 1px, transparent 1px 3px),
+    repeating-linear-gradient(90deg, rgba(255,255,255,.05) 0 1px, transparent 1px 4px);
+  mix-blend-mode: overlay;
 }
-button {
-  background: #00d26a;
-  color: black;
-  border: none;
-  border-radius: 12px;
-  padding: 20px 40px;
-  font-size: 20px;
-  margin: 15px 0;
-  cursor: pointer;
-  width: 80%;
-  max-width: 300px;
+
+/* Nagłówek */
+h1{
+  margin: 18px 0 18px;
+  font-size: clamp(30px, 4.6vw, 44px);
+  letter-spacing:.5px;
+  color: var(--text);
+  text-shadow: 0 0 22px rgba(0,210,106,.22);
 }
-button:hover { background: #00b85d; }
-input {
-  font-size: 20px;
-  padding: 15px;
-  border-radius: 10px;
-  border: 1px solid #ccc;
-  width: 80%;
-  max-width: 300px;
-  text-align: center;
-  margin-bottom: 15px;
+
+/* “App shell” */
+#menu, #hostPanel, #waiting{
+  width: min(560px, 94vw);
+  margin: 14px auto;
+  padding: 20px 16px 18px;
+  background: linear-gradient(180deg, rgba(17,24,36,.92), rgba(17,24,36,.72));
+  border: 1px solid rgba(35,48,65,.75);
+  border-radius: var(--radius);
+  box-shadow: var(--shadowSoft);
+  backdrop-filter: blur(10px);
 }
-#myName {
-  margin-top: 20px;
-  padding: 20px;
-  background: #1c222b;
-  border-radius: 15px;
-  box-shadow: 0 0 15px rgba(0, 210, 106, 0.4);
-  font-size: 20px;
-  display: inline-block;
+
+/* Teksty */
+p, h2{
+  margin: 10px 0;
 }
-.card {
-  margin-top: 30px;
-  padding: 25px 30px;
-  background: #161b22;
-  border-radius: 20px;
-  display: inline-block;
-  font-size: 26px;
-  font-weight: bold;
-  color: #00d26a;
-  text-shadow: 0 0 8px rgba(0, 210, 106, 0.7);
-  max-width: 90%;
-  word-wrap: break-word;
-  transition: all 0.3s ease;
-  white-space: pre-line; /* żeby \n działało czytelnie */
+#orText{
+  color: var(--muted);
+  font-weight: 600;
 }
-.hidden { display: none; }
+
+/* Przyciski języka */
 .smallBtnRow{
   display:flex;
   gap:10px;
   justify-content:center;
   flex-wrap:wrap;
-  margin-bottom: 20px;
+  margin: 6px auto 16px;
 }
+
+/* Buttony */
+button{
+  appearance:none;
+  border:none;
+  cursor:pointer;
+  user-select:none;
+
+  width: 88%;
+  max-width: 340px;
+  padding: 16px 18px;
+  margin: 12px 0;
+
+  border-radius: 16px;
+  font-size: 18px;
+  font-weight: 800;
+  letter-spacing:.2px;
+
+  color: #04150c;
+  background: linear-gradient(135deg, var(--brand), var(--brand2));
+  box-shadow:
+    0 10px 25px rgba(0,210,106,.18),
+    0 3px 0 rgba(0,0,0,.25);
+  transform: translateY(0);
+  transition: transform .12s ease, filter .12s ease, box-shadow .12s ease;
+}
+
+button:hover{
+  filter: brightness(1.05);
+  transform: translateY(-1px);
+  box-shadow:
+    0 14px 32px rgba(0,210,106,.22),
+    0 3px 0 rgba(0,0,0,.25);
+}
+
+button:active{
+  transform: translateY(1px);
+  box-shadow:
+    0 8px 18px rgba(0,210,106,.16),
+    0 2px 0 rgba(0,0,0,.25);
+}
+
+button:focus-visible{
+  outline: none;
+  box-shadow:
+    0 0 0 4px rgba(0,210,106,.22),
+    0 12px 28px rgba(0,0,0,.35);
+}
+
+/* Małe buttony (język) */
 .smallBtnRow button{
   width:auto;
-  padding: 10px 18px;
-  font-size: 16px;
-  margin: 0;
   max-width:none;
+  margin: 0;
+  padding: 10px 14px;
+  font-size: 15px;
+  border-radius: 14px;
+  background: rgba(255,255,255,.06);
+  color: var(--text);
+  border: 1px solid rgba(35,48,65,.9);
+  box-shadow: 0 10px 22px rgba(0,0,0,.18);
+}
+
+.smallBtnRow button:hover{
+  background: rgba(255,255,255,.10);
+  transform: translateY(-1px);
+}
+
+/* Inputy */
+input{
+  width: 88%;
+  max-width: 340px;
+  padding: 14px 14px;
+  margin: 10px 0 6px;
+
+  font-size: 18px;
+  font-weight: 650;
+  text-align:center;
+
+  color: var(--text);
+  background: rgba(255,255,255,.06);
+  border: 1px solid rgba(35,48,65,.95);
+  border-radius: 16px;
+  outline: none;
+
+  box-shadow: inset 0 0 0 1px rgba(0,0,0,.15);
+  transition: border-color .12s ease, box-shadow .12s ease, transform .12s ease;
+}
+
+input::placeholder{ color: rgba(232,238,247,.55); }
+
+input:focus{
+  border-color: rgba(0,210,106,.85);
+  box-shadow:
+    0 0 0 4px rgba(0,210,106,.18),
+    inset 0 0 0 1px rgba(0,0,0,.12);
+}
+
+/* Karty */
+.card{
+  width: min(760px, 94vw);
+  margin: 18px auto 0;
+  padding: 18px 18px;
+
+  background: linear-gradient(180deg, rgba(22,27,34,.92), rgba(22,27,34,.72));
+  border: 1px solid rgba(35,48,65,.85);
+  border-radius: calc(var(--radius) + 2px);
+
+  box-shadow: var(--shadow);
+  backdrop-filter: blur(10px);
+
+  font-size: clamp(18px, 2.6vw, 26px);
+  font-weight: 900;
+  color: var(--text);
+  line-height: 1.25;
+  white-space: pre-line;
+}
+
+.card::before{
+  content:"";
+  display:block;
+  height: 4px;
+  border-radius: 999px;
+  margin-bottom: 12px;
+  background: linear-gradient(90deg, var(--brand), var(--brand2));
+  opacity:.9;
+}
+
+/* “myName” mniej krzykliwe */
+#myName{
+  font-size: 16px;
+  font-weight: 800;
+  color: rgba(232,238,247,.92);
+  text-shadow: none;
+}
+
+/* Ukrywanie */
+.hidden{ display:none; }
+
+/* Drobne dopieszczenie napisów w panelu hosta */
+#hostPanel h2{
+  margin-top: 8px;
+  font-size: 20px;
+  color: rgba(232,238,247,.95);
+}
+#players, #playerList, #waitingText{
+  color: var(--muted);
+  font-weight: 650;
+}
+
+/* Animacja kart (opcjonalna wisienka) */
+@keyframes pop {
+  from { transform: translateY(6px); opacity: 0; }
+  to   { transform: translateY(0); opacity: 1; }
+}
+.card:not(.hidden){
+  animation: pop .18s ease-out;
+}
+
+/* Responsywność */
+@media (max-width: 420px){
+  button{ font-size: 16px; padding: 14px 16px; }
+  input{ font-size: 16px; }
+  #menu, #hostPanel, #waiting{ padding: 16px 12px; }
 }
 </style>
 </head>
+
 <body>
 
 <h1 id="title">🕵️‍♂️ IMPOSTOR GAME</h1>
@@ -164,7 +341,6 @@ const CATEGORIES = {
 };
 
 /* ====== HASŁA POD KATEGORIAMI PL/DE ====== */
-/* (w razie potrzeby możesz dopisać kolejne słowa w odpowiednich kategoriach) */
 const WORDS = {
   body: {
     oko: { pl: "OKO", de: "AUGE" },
@@ -416,7 +592,7 @@ function allWordPairs() {
 function pickUnusedWord(usedWords = []) {
   const usedSet = new Set(usedWords);
   const pool = allWordPairs().filter(p => !usedSet.has(p.id));
-  const finalPool = pool.length ? pool : allWordPairs(); // jak się skończą — reset puli, żeby nie zablokować gry
+  const finalPool = pool.length ? pool : allWordPairs(); // reset puli jeśli zabraknie
   return finalPool[Math.floor(Math.random() * finalPool.length)];
 }
 
@@ -435,22 +611,18 @@ function applyLang() {
   document.getElementById("btnStart").innerText = t[lang].dealRoles;
   document.getElementById("btnNextRound").innerText = t[lang].nextRound;
 
-  // jeśli ktoś czeka
   const waiting = document.getElementById("waiting");
   if (!waiting.classList.contains("hidden")) {
     document.getElementById("waitingText").innerText = t[lang].waiting;
   }
 
-  // odśwież licznik graczy
   if (roomRef) updatePlayerList();
 
-  // odśwież "Twoje imię"
   const myNameDiv = document.getElementById("myName");
   if (!myNameDiv.classList.contains("hidden")) {
     myNameDiv.innerText = `${t[lang].myName}: ${playerName}`;
   }
 
-  // ważne: po zmianie języka odśwież aktualny stan (kategoria + countdown + hasło) w nowym języku
   refreshCurrentResult();
 }
 
@@ -494,6 +666,9 @@ function runCountdownAndReveal(roomData) {
     const msLeft = Math.max(0, (revealAt || 0) - Date.now());
     const secLeft = Math.ceil(msLeft / 1000);
 
+    // reset border na “neutral/green” (żeby nie zostawał czerwony po impostorze)
+    document.getElementById("result").style.borderColor = "rgba(35,48,65,.85)";
+
     // countdown 3..2..1
     if (secLeft > 0) {
       showResult(`${t[lang].category}: ${catName}\n\n${t[lang].startingIn}: ${secLeft}`);
@@ -506,6 +681,8 @@ function runCountdownAndReveal(roomData) {
 
     if (role === "impostor") {
       showResult(`${t[lang].category}: ${catName}\n\n${t[lang].impostor}`);
+      // czerwony akcent dla impostora
+      document.getElementById("result").style.borderColor = "rgba(255,77,109,.65)";
       return;
     }
 
@@ -547,8 +724,6 @@ function refreshCurrentResult() {
   roomRef.get().then(snap => {
     const data = snap.val();
     if (!data || !data.started || !data.roles || !data.wordKey || !data.categoryKey || !data.revealAt) return;
-
-    // przelicz w nowym języku (kategoria + countdown / hasło)
     runCountdownAndReveal(data);
   });
 }
@@ -569,7 +744,7 @@ window.createRoom = async function() {
     players: {},
     started: false,
     round: 0,
-    usedWords: [] // <— historia haseł w pokoju
+    usedWords: []
   });
 
   document.getElementById("menu").classList.add("hidden");
@@ -587,7 +762,6 @@ window.createRoom = async function() {
         lastSeenRound = data.round;
         runCountdownAndReveal(data);
       } else {
-        // jeśli język zmieniony lub ktoś dołączył później — odśwież ekran (bez restartu rundy)
         runCountdownAndReveal(data);
       }
     }
@@ -647,7 +821,7 @@ window.startGame = async function() {
   if (players.length !== MAX_PLAYERS) return alert(t[lang].needExact);
 
   const usedWords = data.usedWords || [];
-  const chosen = pickUnusedWord(usedWords); // {catKey, wordKey, id}
+  const chosen = pickUnusedWord(usedWords);
 
   const impostor = players[Math.floor(Math.random() * players.length)];
   const roles = {};
@@ -655,7 +829,7 @@ window.startGame = async function() {
   roles[playerId] = "host";
 
   const round = (data.round || 0) + 1;
-  const revealAt = Date.now() + 3000; // 3 sekundy => 3..2..1
+  const revealAt = Date.now() + 3000;
 
   await roomRef.update({
     started: true,
