--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="pl">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
 <title id="pageTitle">🕵️‍♂️ IMPOSTOR GAME</title>
 
 <style>
@@ -75,13 +75,8 @@ h1{
 }
 
 /* Teksty */
-p, h2{
-  margin: 10px 0;
-}
-#orText{
-  color: var(--muted);
-  font-weight: 600;
-}
+p, h2{ margin: 10px 0; }
+#orText{ color: var(--muted); font-weight: 600; }
 
 /* Przyciski języka */
 .smallBtnRow{
@@ -256,10 +251,107 @@ input:focus{
   input{ font-size: 16px; }
   #menu, #hostPanel, #waiting{ padding: 16px 12px; }
 }
+
+/* ====== INTRO Z LOGO (logo.png w tym samym folderze co HTML) ====== */
+#intro{
+  position: fixed;
+  inset: 0;
+  z-index: 9999;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  padding: 24px 16px;
+  background:
+    radial-gradient(900px 600px at 20% 10%, rgba(0,210,106,.25), transparent 60%),
+    radial-gradient(700px 500px at 80% 25%, rgba(0,255,168,.16), transparent 60%),
+    linear-gradient(180deg, rgba(7,10,16,.98), rgba(13,17,23,.98));
+  backdrop-filter: blur(10px);
+  transition: opacity .35s ease, transform .35s ease;
+}
+
+#intro.hiddenIntro{
+  opacity: 0;
+  transform: scale(1.03);
+  pointer-events:none;
+}
+
+.introCard{
+  width: min(520px, 94vw);
+  padding: 26px 20px 22px;
+  border-radius: 28px;
+  border: 1px solid rgba(35,48,65,.8);
+  background: linear-gradient(180deg, rgba(17,24,36,.95), rgba(17,24,36,.75));
+  box-shadow: 0 20px 70px rgba(0,0,0,.6);
+  text-align:center;
+}
+
+.introLogoImg{
+  width: 110px;
+  height: 110px;
+  object-fit: contain;
+  margin: 0 auto 14px;
+  display:block;
+  filter: drop-shadow(0 0 22px rgba(0,210,106,.35));
+  animation: logoPop .6s ease both;
+}
+
+@keyframes logoPop{
+  from{ transform: translateY(14px) scale(.92); opacity:0; }
+  to{ transform: translateY(0) scale(1); opacity:1; }
+}
+
+.introTitle{
+  font-size: clamp(22px, 4vw, 30px);
+  font-weight: 950;
+  margin: 6px 0 6px;
+}
+
+.introSub{
+  color: rgba(232,238,247,.7);
+  font-weight: 700;
+  margin-bottom: 16px;
+}
+
+.introBar{
+  height: 10px;
+  border-radius: 999px;
+  background: rgba(255,255,255,.08);
+  overflow:hidden;
+  border: 1px solid rgba(35,48,65,.7);
+  margin-bottom: 18px;
+}
+
+.introBar span{
+  display:block;
+  height:100%;
+  width:0%;
+  background: linear-gradient(90deg, var(--brand), var(--brand2));
+  animation: introLoad 1.5s ease forwards;
+}
+
+@keyframes introLoad{
+  to{ width:100%; }
+}
+
+#btnIntroStart{
+  width: 100%;
+  max-width:none;
+}
 </style>
 </head>
 
 <body>
+
+<!-- INTRO (logo.png musi być w tym samym folderze co ten plik HTML) -->
+<div id="intro">
+  <div class="introCard">
+    <img src="logo.png" alt="LOGO" class="introLogoImg" />
+    <div class="introTitle" id="introTitle">IMPOSTOR GAME</div>
+    <div class="introSub" id="introSub">ŁADOWANIE...</div>
+    <div class="introBar"><span></span></div>
+    <button id="btnIntroStart">START</button>
+  </div>
+</div>
 
 <h1 id="title">🕵️‍♂️ IMPOSTOR GAME</h1>
 
@@ -512,7 +604,7 @@ let playerName = "";
 let lastSeenRound = null;
 let countdownTimer = null;
 
-/* ====== TŁUMACZENIA UI (WIELKIE LITERY) ====== */
+/* ====== TŁUMACZENIA UI ====== */
 let lang = "pl";
 const t = {
   pl: {
@@ -571,6 +663,32 @@ const t = {
   }
 };
 
+/* ====== INTRO: język + zamykanie ====== */
+function applyIntroLang(){
+  const titleEl = document.getElementById("introTitle");
+  const subEl = document.getElementById("introSub");
+  const btnEl = document.getElementById("btnIntroStart");
+  if (!titleEl || !subEl || !btnEl) return;
+
+  if (lang === "de") {
+    titleEl.innerText = "IMPOSTOR SPIEL";
+    subEl.innerText = "LADEN...";
+    btnEl.innerText = "START";
+  } else {
+    titleEl.innerText = "IMPOSTOR GAME";
+    subEl.innerText = "ŁADOWANIE...";
+    btnEl.innerText = "START";
+  }
+}
+
+function hideIntro(){
+  const intro = document.getElementById("intro");
+  if (!intro) return;
+  intro.classList.add("hiddenIntro");
+  setTimeout(() => intro.remove(), 450);
+}
+
+/* ====== helpers słów/kategorii ====== */
 function getCategoryName(catKey) {
   return (CATEGORIES[catKey] && CATEGORIES[catKey][lang]) ? CATEGORIES[catKey][lang] : (catKey || "");
 }
@@ -598,9 +716,9 @@ function pickUnusedWord(usedWords = []) {
 }
 
 /* ====== (10) LEPSZY DOBÓR IMPOSTORÓW ======
-   - 1 impostor zawsze do 6 graczy
-   - 7–9 graczy: 30% szans na 2 impostorów
-   - 10–15 graczy: 60% szans na 2 impostorów
+   - do 6 graczy: zawsze 1
+   - 7–9 graczy: 30% szans na 2
+   - 10–15 graczy: 60% szans na 2
 */
 function pickImpostorCount(playerCount) {
   if (playerCount <= 6) return 1;
@@ -613,6 +731,7 @@ function pickUniqueImpostors(players, count) {
   return new Set(shuffled.slice(0, Math.min(count, players.length)));
 }
 
+/* ====== UI języki ====== */
 function applyLang() {
   document.documentElement.lang = lang;
   document.getElementById("title").innerText = t[lang].title;
@@ -641,6 +760,7 @@ function applyLang() {
   }
 
   refreshCurrentResult();
+  applyIntroLang();
 }
 
 applyLang();
@@ -740,12 +860,9 @@ function refreshCurrentResult() {
   });
 }
 
-/* ====== (1) SPRZĄTANIE GRACZA PO ROZŁĄCZENIU ======
-   Usuwa wpis /players/{playerId} gdy ktoś zamknie kartę / straci połączenie.
-*/
+/* ====== (1) SPRZĄTANIE GRACZA PO ROZŁĄCZENIU ====== */
 function setupAutoRemovePlayerOnDisconnect(code) {
   const playerRef = db.ref(`rooms/${code}/players/${playerId}`);
-  // jeśli połączenie z serwerem zostanie utracone -> usuń gracza
   playerRef.onDisconnect().remove();
 }
 
@@ -775,7 +892,6 @@ window.createRoom = async function() {
   const playerRef = db.ref(`rooms/${code}/players/${playerId}`);
   await playerRef.set({ name: playerName });
 
-  // (1) auto-usuwanie hosta po rozłączeniu
   setupAutoRemovePlayerOnDisconnect(code);
 
   roomRef.on("value", async snapshot => {
@@ -813,7 +929,6 @@ window.joinRoom = async function() {
   const playerRef = db.ref(`rooms/${code}/players/${playerId}`);
   await playerRef.set({ name: playerName });
 
-  // (1) auto-usuwanie gracza po rozłączeniu
   setupAutoRemovePlayerOnDisconnect(code);
 
   showMyName();
@@ -911,7 +1026,7 @@ window.nextRound = async function() {
   document.getElementById("result").classList.add("hidden");
 };
 
-/* ====== Eventy ====== */
+/* ====== Eventy + intro init ====== */
 document.getElementById("btnCreate").addEventListener("click", createRoom);
 document.getElementById("btnJoin").addEventListener("click", joinRoom);
 document.getElementById("btnStart").addEventListener("click", startGame);
@@ -919,6 +1034,13 @@ document.getElementById("btnNextRound").addEventListener("click", nextRound);
 
 document.getElementById("btnLangPl").addEventListener("click", () => { lang = "pl"; applyLang(); });
 document.getElementById("btnLangDe").addEventListener("click", () => { lang = "de"; applyLang(); });
+
+window.addEventListener("DOMContentLoaded", () => {
+  applyIntroLang();
+  const btn = document.getElementById("btnIntroStart");
+  if (btn) btn.addEventListener("click", hideIntro);
+  setTimeout(hideIntro, 1700);
+});
 </script>
 </body>
 </html>
